# rustmail

./: Cargo.toml  README.md  README_CN.md
.github/workflows/: release.yml
locales/: en.yml  zh-CN.yml
src/: main.rs
