[package]
name = "rustmail"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre     = { version = "0.11.17", default-features = false, features = ["builder", "smtp-transport", "serde", "native-tls"] }
clap = { version = "4.5", features = ["derive", "env"] }
mime_guess = "2.0"
anyhow = "1.0"
rust-i18n = "2.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
native-tls = "0.2.11"
